test/tests/stages/15_arrays_and_pointer_arithmetic/valid/declarators/for_loop_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: counter
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: i
                    CCompoundInit: 
                      List[3]: 
                        CSingleInit: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          None: 
                        CSingleInit: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                          None: 
                        CSingleInit: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                          None: 
                      None: 
                    Array: 
                      TLong: 3
                      Int: 
                    None: 
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: counter
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: counter
                    None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: counter
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CIf: 
                          CBinary: 
                            CNotEqual: 
                            CSubscript: 
                              CVar: 
                                TIdentifier: i
                                None: 
                              CVar: 
                                TIdentifier: counter
                                None: 
                              None: 
                            CBinary: 
                              CAdd: 
                              CVar: 
                                TIdentifier: counter
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                            None: 
                          CCompound: 
                            CB: 
                              List[1]: 
                                CS: 
                                  CReturn: 
                                    CConstant: 
                                      CConstInt: 
                                        TInt: 1
                                      None: 
                          None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
